--- a/html/guigen/guides/logiche_contentPanel/css/style.css
+++ b/html/guigen/guides/logiche_contentPanel/css/style.css
@@ -11,7 +11,7 @@
 .features2 td {text-align:center;border:1px solid;}
 
 
-td.featureOperation {font-weight:bold; vertical-align: middle;}  
+td.featureOperation {font-weight:bold; vertical-align: middle;background-color:buttonshadow;}  
 
 td.featureDescr {text-align:left;padding-left:10px;}
 
