git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4394 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/logiche_contentPanel/css/style.css
+++ b/html/guigen/guides/logiche_contentPanel/css/style.css
@@ -11,7 +11,7 @@
 .features2 td {text-align:center;border:1px solid;}
 
 
-td.featureOperation {font-weight:bold; vertical-align: middle;background-color:buttonshadow;}  
+td.featureOperation {font-weight:bold; vertical-align: middle;background-color:#F5F5F5;}  
 
 td.featureDescr {text-align:left;padding-left:10px;}
 
